--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ResultActivity" />
-        <activity android:name=".Result2Activity"></activity>
+        <activity android:name=".Result2Activity" />
+        <activity android:name=".BoxActivity"></activity>
     </application>
 
 </manifest>
